# website

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  build.sh  cssUp.sh  fly.toml  image_build.sh  index.html  jindex.html  nginx.conf  tailwind.config.js
assets/: hamishpoole_website.css
public/: generated.css  tailwind.css
public/assets/: hamishpoole_website.css  tailwind.css
public/assets/dioxus/: website.js  website_bg.wasm
public/assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
src/: features.rs  index.css  lib.rs  main.rs  pages.rs  tailwind.css
src/assets/: hamishpoole_website.css
src/context/: hamishpoole_website.css
src/features/: homepage.rs  recipes.rs
src/pages/: blog_landing.rs  homepage.rs  recipes_entry.rs  recipes_landing.rs
src/utils/: constants.rs
