[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-router = { git = "https://github.com/dioxuslabs/dioxus", features = [
    "web",
] }
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
wasm-logger = "*"
web-sys = "*"
log = "*"
